--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,33 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
-    "target": "ES6"
-  }
+    //Target
+    "target": "ES5",
+    "module": "None",
+    "lib": [
+      "ES5",
+      "DOM",
+      "ES2016.array.include",
+      "ES2019.string",
+      "ES2019.array",
+      "ES2019.object"
+    ],
+
+    //Generation:
+    "sourceMap": true,
+    "declaration": false,
+    //"declarationDir": "declarations",
+    "removeComments":  true,
+
+    //Type checking:
+    "strict": true,
+    "noImplicitAny": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "checkJs": false
+  },
+  "exclude": [
+    "node_modules",
+    "wwwroot"
+  ]
 }
